[package]
name = "playlist-dw"
version = "0.3.9"
edition = "2021"
license = "LGPL"
description = "Automatic playlist syncer, to keep your local library up to date!"
authors = ["0xJoeMama <0xjoemama@gmail.com>"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11.*", features = ["gzip", "serde_json", "json"] }
dotenv = "0.15.*"
ytd-rs = { features = ["yt-dlp"], version = "0.1.*" }
serde_json = "1.0.*"
serde = { version = "1.0.*", features = ["derive"] }
anyhow = "1.0.*"
clap = { version = "4.2.5", features = ["derive"] }
tokio = { version = "1.28.*", features = ["process", "fs", "macros", "rt-multi-thread", "time"] }
