[package]
name = "playlist-dw"
version = "0.3.9"
edition = "2021"
license = "LGPL"
description = "Automatic playlist syncer, to keep your local library up to date!"
authors = ["0xJoeMama <0xjoemama@gmail.com>"]
readme = "README.md"
keywords = ["youtube", "music", "playlist", "async", "daemon", "tokio"]
repository = "https://github.com/0xJoeMama/playlist-dw"
categories = [
  "command-line-utilities",
  "multimedia::audio",
  "network-programming",
  "asynchronous",
  "caching",
]

[dependencies]
reqwest = { version = "0.11.*", features = ["gzip", "serde_json", "json"] }
serde_json = "1.0.*"
serde = { version = "1.0.*", features = ["derive"] }
anyhow = "1.0.*"
clap = { version = "4.3.*", features = ["derive"] }
tokio = { version = "1.28.*", features = [
  "process",
  "fs",
  "macros",
  "rt-multi-thread",
  "time",
] }
dotenv = "0.15.*"
