[package]
name = "playlist-dw"
version = "0.3.9"
edition = "2021"
license = "LGPL"
description = "Automatic playlist syncer, to keep your local library up to date!"
authors = ["0xJoeMama <0xjoemama@gmail.com>"]
readme = "README.md"
keywords = ["youtube", "music", "playlist", "async", "daemon", "tokio"]
repository = "https://github.com/0xJoeMama/playlist-dw"
categories = [
  "command-line-utilities",
  "multimedia::audio",
  "network-programming",
  "asynchronous",
  "caching",
]

[dependencies]
reqwest = { version = "0.12.*", features = ["gzip", "json"] }
serde_json = "1.0.*"
anyhow = "1.0.*"
clap = { version = "4.5.*", features = ["derive"] }
tokio = { version = "1.42.*", features = [
  "process",
  "fs",
  "macros",
  "rt-multi-thread",
  "time",
] }
dotenv = { version = "0.15.*" }
libc = "*"
fd-lock = "4.0.*"
